# cc-share

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  error.rs  http_client.rs  lib.rs  main.rs  url_utils.rs
src-tauri/src/auth/: callback.rs  client.rs  mod.rs  refresh.rs  token.rs
src-tauri/src/ccswitch/: mod.rs  provider_registry.rs  proxy_client.rs  proxy_executor.rs
src-tauri/src/commands/: auth.rs  consume.rs  consume_config.rs  local_server.rs  mod.rs  p2p.rs  providers.rs  share.rs  stats.rs  system_log.rs  wallet.rs
src-tauri/src/content_filter/: mod.rs  rules.rs
src-tauri/src/credits/: mod.rs  pricing.rs  settlement.rs  wallet.rs
src-tauri/src/database/: dao_config.rs  dao_credits.rs  dao_share.rs  dao_sync.rs  mod.rs  schema.rs
src-tauri/src/local_server/: anthropic_compat.rs  mod.rs  openai_compat.rs
src-tauri/src/p2p/: connection.rs  consumer.rs  crypto.rs  events.rs  hole_punch.rs  key.rs  mod.rs  pool.rs  protocol.rs  report.rs  session.rs  stun_client.rs  supplier.rs
src-tauri/src/share/: client.rs  consumer.rs  daemon.rs  executor.rs  fingerprint.rs  humanizer.rs  mod.rs  mutex.rs  protocol.rs  signing.rs  supplier.rs  web_bridge.rs  web_executor.rs
src-tauri/src/stats/: mod.rs  sync.rs
src-tauri/src/system_log/: dao.rs  mod.rs  pipeline.rs
src-tauri/tests/: local_server_test.rs
src/auth/: ApiKeyManager.tsx  AuthDialog.tsx  AuthPanel.tsx
src/components/: RoleSwitcher.tsx
src/consume/: ConsumePanel.tsx
src/i18n/: auth-en.json  auth-zh.json  en.json  index.ts  wallet-en.json  wallet-zh.json  zh.json
src/lib/: RoleContext.tsx  api.ts  errors.ts  events.ts  tray.ts
src/p2p/: P2PPanel.tsx
src/providers/: ProvidersPanel.tsx
src/settings/: SettingsPanel.tsx
src/share/: EarningsCalculator.tsx  FirstRunGuide.tsx  (+2 more)
tests/: integration_web_bridge.rs
(+12 files in other folders)
