[package]
name = "shareplan-app"
version = "0.1.0"
description = "SharePlan — P2P AI subscription sharing standalone Tauri app"
edition = "2021"
rust-version = "1.85.0"  # min supported; tests run on stable

[lib]
name = "shareplan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[[bin]]
name = "cc-share"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
log = "0.4"
fern = "0.7"
tauri-plugin-log = "2"
thiserror = "2.0"
rand = "0.8"
dirs = "5"
urlencoding = "2"
base64 = "0.22"

# P2P direct connection dependencies
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rmp-serde = "1.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "test-util"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
